Opened 15 years ago
Closed 14 years ago
#869 closed defect (fixed)
bgr0 -> bgra does not make the output opaque
| Reported by: | Carl Eugen Hoyos | Owned by: | Michael Niedermayer |
|---|---|---|---|
| Priority: | normal | Component: | swscale |
| Version: | git-master | Keywords: | alpha BGR0 |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
If I decode attached sample with current FFmpeg, pix_fmt is currently identified as bgr0, but on conversion to bgra, the output is transparent (instead of opaque).
ffmpeg -i out.avi -pix_fmt bgra out.png
ffmpeg version N-36363-g0af34c4, Copyright (c) 2000-2012 the FFmpeg developers
built on Jan 3 2012 01:15:46 with gcc 4.5.3
configuration: --cc='/usr/local/gcc-4.5.3/bin/gcc -m32'
libavutil 51. 33.100 / 51. 33.100
libavcodec 53. 50.100 / 53. 50.100
libavformat 53. 29.100 / 53. 29.100
libavdevice 53. 4.100 / 53. 4.100
libavfilter 2. 57.101 / 2. 57.101
libswscale 2. 1.100 / 2. 1.100
libswresample 0. 5.100 / 0. 5.100
Input #0, avi, from 'out.avi':
Metadata:
encoder : Lavf52.108.0
Duration: 00:00:00.04, start: 0.000000, bitrate: 21647 kb/s
Stream #0:0: Video: ffv1 (FFV1 / 0x31564646), bgr0, 256x256, 25 tbr, 25 tbn, 25 tbc
[buffer @ 0x8dcdd20] w:256 h:256 pixfmt:bgr0 tb:1/1000000 sar:0/1 sws_param:
[buffersink @ 0x8dced80] auto-inserting filter 'auto-inserted scale 0' between the filter 'src' and the filter 'out'
[scale @ 0x8dcf2e0] w:256 h:256 fmt:bgr0 -> w:256 h:256 fmt:bgra flags:0x4
Output #0, image2, to 'out.png':
Metadata:
encoder : Lavf53.29.100
Stream #0:0: Video: png, bgra, 256x256, q=2-31, 200 kb/s, 90k tbn, 25 tbc
Stream mapping:
Stream #0:0 -> #0:0 (ffv1 -> png)
Press [q] to stop, [?] for help
frame= 1 fps= 0 q=0.0 Lsize= 0kB time=00:00:00.04 bitrate= 0.0kbits/s
video:191kB audio:0kB global headers:0kB muxing overhead -100.000000%
out.png is transparent
Attachments (1)
Change History (3)
by , 15 years ago
comment:1 by , 15 years ago
comment:2 by , 14 years ago
| Keywords: | BGR0 added |
|---|---|
| Reproduced by developer: | set |
| Resolution: | → fixed |
| Status: | new → closed |
Locally fixed
Note:
See TracTickets
for help on using tickets.



Additional sample is attached to ticket #895.