sws: Fix RGB0->alpha containing formats.

Fixes Ticket869

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>